# flan

./: .dockerignore  .gitignore  .mise.local.toml  .mise.toml  Cargo.toml  Dockerfile  LICENSE  README.md  bacon.toml  config.template.toml  dist-workspace.toml  docker-compose.example.yaml  knope.toml  mise.toml  renovate.json
.cargo/: config.toml  toolchain.toml
.github/workflows/: prepare-release.yaml  release.yaml  release.yml
cli/: Cargo.toml  README.md
cli/src/: core.rs  main.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs  list.rs  register.rs  upload.rs
frontend/: .dockerignore  Dockerfile  auto-imports.d.ts  bun.lockb  components.d.ts  components.json  env.d.ts  eslint.config.mjs  index.html  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: SiteFooter.vue  SiteHeader.vue  ThemeToggle.vue
frontend/src/components/ui/dropdown-menu/: DropdownMenuCheckboxItem.vue  DropdownMenuRadioItem.vue  DropdownMenuSubTrigger.vue
frontend/src/components/ui/toast/: ToastClose.vue  index.ts
frontend/src/lib/: _api.ts  client.ts  date.ts
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/styles/: main.scss
frontend/src/views/: HomeView.vue  LoginView.vue
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20241126122837_folders_tags_role_sharablelinks_visibility/: migration.sql
src/: image.rs  main.rs  state.rs
src/handlers/: delete_image.rs  get_image.rs  list_images.rs  mod.rs  register_user.rs  upload_image.rs
src/handlers/favorite/: mod.rs
src/handlers/folder/: create.rs  delete.rs  list.rs  mod.rs  update.rs
src/handlers/image/: delete.rs  get.rs  list.rs  mod.rs  upload.rs
src/handlers/tag/: associate.rs  create.rs  delete.rs  mod.rs
src/handlers/user/: mod.rs  register.rs
src/layers/: mod.rs  sessions.rs
xtask/: Cargo.toml
xtask/src/: main.rs
