[package]
name = "flan"
version = "0.1.0"
edition = "2021"
include = ["src/**/*"]
exclude = ["**/node_modules", "frontend"]
publish = false

[workspace]
members = ["cli", "prisma-cli", "common", "xtask"]
resolver = "2"

[dependencies]
axum = { version = "0.7", features = [
  "json",
  "macros",
  "multipart",
  "tokio",
  "tower-log",
  "tracing",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
dotenvy = "0.15.7"
s3-tokio = "0.39.4"
rand = "0.8.5"
eyre = "0.6.12"
color-eyre = { version = "0.6.3", features = [
  "capture-spantrace",
  "issue-url",
] }
tracing-error = "0.2.0"
common = { path = "./common" }
chrono.workspace = true
time = { version = "0.3.36", features = ["formatting", "macros"] }
tower-http = { version = "0.6.1", features = [
  "compression-gzip",
  "fs",
  "timeout",
  "trace",
] }
image = { version = "0.24.6", features = ["jpeg", "png", "webp"] }
fred = { version = "9.4.0" }
webp = "0.2.2"
tokio.workspace = true
serde.workspace = true
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
  "postgresql",
] }
futures-util = "0.3.31"
tower-service = "0.3.3"
tower-layer = "0.3.3"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
chrono = "0.4.38"

[[bin]]
name = "flan"
path = "src/main.rs"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
