[package]
name = "flan"
version = "0.1.0"
edition = "2021"
include = ["src/**/*"]
exclude = ["**/node_modules", "frontend"]
publish = false

[workspace]
members = ["prisma-cli", "common", "xtask"]
resolver = "2"

[dependencies]
axum = { version = "0.7.9", features = [
  "json",
  "macros",
  "multipart",
  "tokio",
  "tower-log",
  "tracing",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
uuid = { version = "1.11.0", features = ["v4"] }
bytes = "1.9.0"
dotenvy = "0.15.7"
s3-tokio = "0.39.4"
rand = "0.8.5"
eyre = "0.6.12"
color-eyre = { version = "0.6.3", features = [
  "capture-spantrace",
  "issue-url",
] }
tracing-error = "0.2.1"
common = { path = "./common" }
chrono.workspace = true
time = { version = "0.3.37", features = ["formatting", "macros"] }
tower-http = { version = "0.6.2", features = [
  "compression-gzip",
  "fs",
  "timeout",
  "trace",
] }
image = { version = "0.25.5", features = ["jpeg", "png", "webp"] }
fred = { version = "9.4.0" }
webp = "0.3.0"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
  "postgresql",
] }
futures-util = "0.3.31"
tower-service = "0.3.3"
tower-layer = "0.3.3"
utoipa = { version = "5.2.0", features = [
  "axum_extras",
  "chrono",
  "uuid",
  "macros",
] }
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
tower-cookies = "0.10.0"
tower-sessions = "0.13.0"

[workspace.dependencies]
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
chrono = "0.4.38"
serde_json = "1.0.133"

[[bin]]
name = "flan"
path = "src/main.rs"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.bacon]
inherits = "dev"

[profile.opt]
inherits = "release"
opt-level = 3
debug = false
rpath = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
