[package]
name = "flan-cli"
readme = "./README.md"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/taskylizard/flan"
publish = true

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json", "multipart"] }
color-eyre = "0.6.3"
clap = { version = "4.5.23", features = ["derive", "env"] }
console = "0.15.10"
mime_guess = "2.0.5"
chrono = { version = "0.4.39", features = ["serde"] }
comfy-table = "7.1.3"
common = { path = "../common" }
openssl = { version = "0.10.68", features = ["vendored"] }

# metadata for cargo-binstall to get the right artifacts
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ name }-{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/flan-cli", dest = "/usr/bin/flan-cli", mode = "755" },
  { source = "LICENSE", dest = "/usr/share/doc/flan-cli/LICENSE", mode = "644" },
  { source = "README.md", dest = "/usr/share/doc/flan-cli/README.md", mode = "644" },
  { source = "man/flan-cli.1", dest = "/usr/share/man/man1/git-cliff.1", mode = "644", doc = true },
  { source = "completions/flan-cli.bash", dest = "/usr/share/bash-completion/completions/git-cliff", mode = "644" },
  { source = "completions/flan-cli.fish", dest = "/usr/share/fish/vendor_completions.d/git-cliff.fish", mode = "644" },
  { source = "completions/_flan-cli", dest = "/usr/share/zsh/vendor-completions/", mode = "644" },
]

[package.metadata.deb]
assets = [
  [
    "target/release/flan-cli",
    "usr/bin/",
    "755",
  ],
  [
    "../LICENSE",
    "/usr/share/doc/flan-cli/LICENSE",
    "644",
  ],
  [
    "./README.md",
    "usr/share/doc/flan-cli/README",
    "644",
  ],
  [
    "../completions/flan-cli.bash",
    "/usr/share/bash-completion/completions/flan-cli",
    "644",
  ],
  [
    "../completions/flan-cli.fish",
    "/usr/share/fish/vendor_completions.d/flan-cli.fish",
    "644",
  ],
  [
    "../completions/_flan-cli",
    "/usr/share/zsh/vendor-completions/",
    "644",
  ],
]
