[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
xshell = "0.2.7"
eyre = "0.6.12"
clap_complete = "4.5.40"
flan-cli = { path = "../cli" }
common = { path = "../common" }
confique = { version = "0.3.0", features = ["toml"] }
